--- a/C1 - Supervised Machine Learning - Regression and Classification/week1/Optional Labs/C1_W1_Lab01_Python_Jupyter_Soln.ipynb
+++ b/C1 - Supervised Machine Learning - Regression and Classification/week1/Optional Labs/C1_W1_Lab01_Python_Jupyter_Soln.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "9928387b",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -18,6 +19,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "24dbf9fc",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -34,6 +36,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "471b75fe",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -45,6 +48,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7d3d6793",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -58,6 +62,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1894deaf",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -69,6 +74,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3d204277",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -82,6 +88,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d6b66e79",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -94,6 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "a1257526",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -115,6 +123,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1fdbebbc",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -135,6 +144,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4b1e9733",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -150,6 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "e06ce10d",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -172,6 +183,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fa5b9bfe",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -185,7 +197,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -199,7 +211,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
