--- a/C1 - Supervised Machine Learning - Regression and Classification/week2/Optional Labs/C1_W2_Lab01_Python_Numpy_Vectorization_Soln.ipynb
+++ b/C1 - Supervised Machine Learning - Regression and Classification/week2/Optional Labs/C1_W2_Lab01_Python_Numpy_Vectorization_Soln.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -152,7 +152,7 @@
      "text": [
       "np.zeros(4) :   a = [0. 0. 0. 0.], a shape = (4,), a data type = float64\n",
       "np.zeros(4,) :  a = [0. 0. 0. 0.], a shape = (4,), a data type = float64\n",
-      "np.random.random_sample(4): a = [0.16054681 0.65264985 0.98302218 0.29864795], a shape = (4,), a data type = float64\n"
+      "np.random.random_sample(4): a = [0.03611037 0.10331733 0.59227794 0.14509191], a shape = (4,), a data type = float64\n"
      ]
     }
    ],
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -188,7 +188,7 @@
      "output_type": "stream",
      "text": [
       "np.arange(4.):     a = [0. 1. 2. 3.], a shape = (4,), a data type = float64\n",
-      "np.random.rand(4): a = [0.04467047 0.14854614 0.24949402 0.02417095], a shape = (4,), a data type = float64\n"
+      "np.random.rand(4): a = [0.84520149 0.87425353 0.54938157 0.31324497], a shape = (4,), a data type = float64\n"
      ]
     }
    ],
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -654,7 +654,8 @@
      "output_type": "stream",
      "text": [
       "NumPy 1-D np.dot(a, b) = 24, np.dot(a, b).shape = () \n",
-      "NumPy 1-D np.dot(b, a) = 24, np.dot(a, b).shape = () \n"
+      "NumPy 1-D np.dot(b, a) = 24, np.dot(a, b).shape = () \n",
+      "[1 2 3 4] [-1  4  3  2] 24 [-1  8  9  8]\n"
      ]
     }
    ],
@@ -665,7 +666,8 @@
     "c = np.dot(a, b)\n",
     "print(f\"NumPy 1-D np.dot(a, b) = {c}, np.dot(a, b).shape = {c.shape} \") \n",
     "c = np.dot(b, a)\n",
-    "print(f\"NumPy 1-D np.dot(b, a) = {c}, np.dot(a, b).shape = {c.shape} \")\n"
+    "print(f\"NumPy 1-D np.dot(b, a) = {c}, np.dot(a, b).shape = {c.shape} \")\n",
+    "print ( a,b, c , a*b)"
    ]
   },
   {
@@ -1053,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1129,7 +1131,7 @@
    "rndtag": "40015"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1143,7 +1145,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.12.9"
   },
   "toc-autonumbering": false
  },
